@@ -1,5 +1,7 @@
 package pepjebs.mapatlases.integration.platform;
 
+import dev.emi.trinkets.api.TrinketComponent;
+import dev.emi.trinkets.api.TrinketsApi;
 import net.mehvahdjukaar.supplementaries.common.utils.SlotReference;
 import net.minecraft.util.Tuple;
 import net.minecraft.world.entity.player.Player;
@@ -12,8 +14,9 @@ public class TrinketsCompatImpl {
     public static ItemStack getAtlasInTrinket(Player player) {
         TrinketComponent trinket = TrinketsApi.getTrinketComponent(player).orElse(null);
         if (trinket != null) {
-            List<Tuple<SlotReference, ItemStack>> found = trinket.getEquipped(MapAtlasesMod.MAP_ATLAS.get());
-            if (!found.isEmpty()) return found.get(0).getB();
+            var found =
+                    trinket.getEquipped(MapAtlasesMod.MAP_ATLAS.get());
+            if (!found.isEmpty()) return found.getFirst().getB();
         }
         return ItemStack.EMPTY;
     }
